GpuVideoDecoder should reject playback of videos with alpha channel.

This channel is not decoded by the hardware decoder, so we should
force these to fallback to software decoding.

BUG=621135
TEST=http://simpl.info/videoalpha

Review-Url: https://codereview.chromium.org/2077023002
Cr-Commit-Position: refs/heads/master@{#400477}

Former-commit-id: 6a4d01c7fda0bf54c847ee1198a3a3e4670f8e27